err/nano.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/nano'...
Listing './lib/python3.5/site-packages/nano/activation'...
Listing './lib/python3.5/site-packages/nano/activation/templates'...
Listing './lib/python3.5/site-packages/nano/activation/templates/nano'...
Listing './lib/python3.5/site-packages/nano/activation/templates/nano/activation'...
Listing './lib/python3.5/site-packages/nano/badge'...
Listing './lib/python3.5/site-packages/nano/badge/templates'...
Listing './lib/python3.5/site-packages/nano/badge/templates/badge'...
Listing './lib/python3.5/site-packages/nano/badge/templatetags'...
Listing './lib/python3.5/site-packages/nano/blog'...
Listing './lib/python3.5/site-packages/nano/blog/management'...
Listing './lib/python3.5/site-packages/nano/blog/management/commands'...
Compiling './lib/python3.5/site-packages/nano/blog/management/commands/migrate_tagging_to_taggit.py'...
***   File "./lib/python3.5/site-packages/nano/blog/management/commands/migrate_tagging_to_taggit.py", line 10
    print "Missing tag-library, aborting: %s" % e
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/nano/blog/templates'...
Listing './lib/python3.5/site-packages/nano/blog/templates/blog'...
Listing './lib/python3.5/site-packages/nano/chunk'...
Listing './lib/python3.5/site-packages/nano/comments'...
Listing './lib/python3.5/site-packages/nano/comments/templates'...
Listing './lib/python3.5/site-packages/nano/comments/templates/nano'...
Listing './lib/python3.5/site-packages/nano/comments/templates/nano/comments'...
Listing './lib/python3.5/site-packages/nano/comments/templatetags'...
Listing './lib/python3.5/site-packages/nano/countries'...
Listing './lib/python3.5/site-packages/nano/faq'...
Listing './lib/python3.5/site-packages/nano/link'...
Listing './lib/python3.5/site-packages/nano/mark'...
Listing './lib/python3.5/site-packages/nano/mark/templates'...
Listing './lib/python3.5/site-packages/nano/mark/templates/nano'...
Listing './lib/python3.5/site-packages/nano/mark/templates/nano/mark'...
Listing './lib/python3.5/site-packages/nano/mark/templatetags'...
Listing './lib/python3.5/site-packages/nano/privmsg'...
Listing './lib/python3.5/site-packages/nano/privmsg/templates'...
Listing './lib/python3.5/site-packages/nano/privmsg/templates/privmsg'...
Listing './lib/python3.5/site-packages/nano/tools'...
Listing './lib/python3.5/site-packages/nano/tools/templates'...
Listing './lib/python3.5/site-packages/nano/tools/templatetags'...
Listing './lib/python3.5/site-packages/nano/user'...
Listing './lib/python3.5/site-packages/nano/user/templates'...
Listing './lib/python3.5/site-packages/nano/user/templates/nano'...
Listing './lib/python3.5/site-packages/nano/user/templates/nano/user'...
Listing './lib/python3.5/site-packages/nano-0.9.4.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
